--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WEB studoi</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+      <a href="">WEB</a>
+      <a href="">STUDIO</a>
+      <ul>
+        <li><a href=""></a>Studio</a></li>
+        <li><a href=""></a>Portfolio</li>
+        <li><a href=""></a>Contacts</li>
+      </ul>
+      <ul>
+         </nav>
+        <address>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a><br /></li>
+       <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a><br /></li>
+      </address>
+      </ul>
+    </header>
+  </body>
 </html>
