--- a/index.html
+++ b/index.html
@@ -8,20 +8,75 @@
   <body>
     <header>
       <nav>
+        <a href="">WEB</a>
+        <a href="">STUDIO</a>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <br />
+          </li>
+          <li>
+            <a href="tel:+110001111111">110001111111</a>
+            <br />
+          </li>
+        </ul>
+      </address>
+    </header>
+    <main>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+      <section>
+        <ul>
+          <li><h2>Strategy</h2></li>
+          Our goal is to identify the business problem to walk away with the
+          perfect and creative solution.
+          <li><h2>Punctuality</h2></li>
+          Bring the key message to the brand's audience for the best price
+          within the shortest possible time.
+          <li><h2>Diligence</h2></li>
+          Research and confirm brands that present the strongest digital growth
+          opportunities and minimize risk.
+          <li><h2>Technologies</h2></li>
+          Design practice focused on digital experiences. We bring forth a deep
+          passion for problem-solving.
+        </ul>
+      </section>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li><img src="images/img.jpg" alt="team card" width="264" /></li>
+          <h3>Mark Guerrero</h3>
+          <p>Product Designer</p>
+          <li><img src="images/tom.jpg" alt="team card2" width="264" /></li>
+          <h3>Tom Ford</h3>
+          Frontend Developer
+          <li>
+            <img src="images/camila.jpg" alt="team card3" width="264" />
+          </li>
+          <h3>Camila Garcia</h3>
+          Marketing
+          <li><img src="images/david.jpg" alt="team card" width="264" /></li>
+          <h3>Daniel Wilson</h3>
+          UI Designer
+        </ul>
+      </section>
+    </main>
+    <footer>
       <a href="">WEB</a>
       <a href="">STUDIO</a>
-      <ul>
-        <li><a href=""></a>Studio</a></li>
-        <li><a href=""></a>Portfolio</li>
-        <li><a href=""></a>Contacts</li>
-      </ul>
-      <ul>
-         </nav>
-        <address>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a><br /></li>
-       <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a><br /></li>
-      </address>
-      </ul>
-    </header>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
