--- a/index.html
+++ b/index.html
@@ -37,17 +37,25 @@
       <section>
         <ul>
           <li><h2>Strategy</h2></li>
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
+          <p>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </p>
           <li><h2>Punctuality</h2></li>
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
+          <p>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </p>
           <li><h2>Diligence</h2></li>
-          Research and confirm brands that present the strongest digital growth
-          opportunities and minimize risk.
+          <p>
+            Research and confirm brands that present the strongest digital
+            growth opportunities and minimize risk.
+          </p>
           <li><h2>Technologies</h2></li>
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
+          <p>
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </p>
         </ul>
       </section>
       <section>
@@ -58,15 +66,15 @@
           <p>Product Designer</p>
           <li><img src="images/tom.jpg" alt="team card2" width="264" /></li>
           <h3>Tom Ford</h3>
-          Frontend Developer
+          <p>Frontend Developer</p>
           <li>
             <img src="images/camila.jpg" alt="team card3" width="264" />
           </li>
           <h3>Camila Garcia</h3>
-          Marketing
+          <p>Marketing</p>
           <li><img src="images/david.jpg" alt="team card" width="264" /></li>
           <h3>Daniel Wilson</h3>
-          UI Designer
+          <p>UI Designer</p>
         </ul>
       </section>
     </main>
