--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <header>
       <nav>
-        <a href="">WEB</a>
-        <a href="">STUDIO</a>
+        <a href="https://artemgoit.github.io/goit-markup-hw-01/">WEB</a>
+        <a href="https://artemgoit.github.io/goit-markup-hw-01/">STUDIO</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -23,7 +23,7 @@
             <br />
           </li>
           <li>
-            <a href="tel:+110001111111">110001111111</a>
+            <a href="tel:+110001111111">+110001111111</a>
             <br />
           </li>
         </ul>
@@ -35,23 +35,24 @@
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2>Business</h2>
         <ul>
-          <li><h2>Strategy</h2></li>
+          <li><h3>Strategy</h3></li>
           <p>
             Our goal is to identify the business problem to walk away with the
             perfect and creative solution.
           </p>
-          <li><h2>Punctuality</h2></li>
+          <li><h3>Punctuality</h3></li>
           <p>
             Bring the key message to the brand's audience for the best price
             within the shortest possible time.
           </p>
-          <li><h2>Diligence</h2></li>
+          <li><h3>Diligence</h3></li>
           <p>
             Research and confirm brands that present the strongest digital
             growth opportunities and minimize risk.
           </p>
-          <li><h2>Technologies</h2></li>
+          <li><h3>Technologies</h3></li>
           <p>
             Design practice focused on digital experiences. We bring forth a
             deep passion for problem-solving.
@@ -79,8 +80,8 @@
       </section>
     </main>
     <footer>
-      <a href="">WEB</a>
-      <a href="">STUDIO</a>
+      href="https://artemgoit.github.io/goit-markup-hw-01/">WEB />
+      href="https://artemgoit.github.io/goit-markup-hw-01/">STUDIO/>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
