--- a/index.html
+++ b/index.html
@@ -36,52 +36,45 @@
       </section>
       <section>
         <h2>Business</h2>
-        <ul>
-          <li><h3>Strategy</h3></li>
-          <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-          <li><h3>Punctuality</h3></li>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-          <li><h3>Diligence</h3></li>
-          <p>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
-          <li><h3>Technologies</h3></li>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </ul>
+        <h3>Strategy</h3>
+
+        Our goal is to identify the business problem to walk away with the
+        perfect and creative solution. <
+        <h3>Punctuality</h3>
+
+        Bring the key message to the brand's audience for the best price within
+        the shortest possible time.
+        <h3>Diligence</h3>
+
+        Research and confirm brands that present the strongest digital growth
+        opportunities and minimize risk.
+
+        <h3>Technologies</h3>
+
+        Design practice focused on digital experiences. We bring forth a deep
+        passion for problem-solving.
       </section>
       <section>
         <h2>Our Team</h2>
-        <ul>
-          <li><img src="images/img.jpg" alt="team card" width="264" /></li>
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
-          <li><img src="images/tom.jpg" alt="team card2" width="264" /></li>
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
-          <li>
-            <img src="images/camila.jpg" alt="team card3" width="264" />
-          </li>
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
-          <li><img src="images/david.jpg" alt="team card" width="264" /></li>
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
-        </ul>
+        <li><img src="images/img.jpg" alt="team card" width="264" /></li>
+        <h3>Mark Guerrero</h3>
+        <p>Product Designer</p>
+        <li><img src="images/tom.jpg" alt="team card2" width="264" /></li>
+        <h3>Tom Ford</h3>
+        <p>Frontend Developer</p>
+        <li>
+          <img src="images/camila.jpg" alt="team card3" width="264" />
+        </li>
+        <h3>Camila Garcia</h3>
+        <p>Marketing</p>
+        <li><img src="images/david.jpg" alt="team card" width="264" /></li>
+        <h3>Daniel Wilson</h3>
+        <p>UI Designer</p>
       </section>
     </main>
     <footer>
-      href="https://artemgoit.github.io/goit-markup-hw-01/">WEB />
-      href="https://artemgoit.github.io/goit-markup-hw-01/">STUDIO/>
+      <a href="https://artemgoit.github.io/goit-markup-hw-01/">WEB</a>
+      <a href="https://artemgoit.github.io/goit-markup-hw-01/">STUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
