--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <header>
       <nav>
-        <a href="https://artemgoit.github.io/goit-markup-hw-01/">WEB</a>
-        <a href="https://artemgoit.github.io/goit-markup-hw-01/">STUDIO</a>
+        <a href="./index.html">Web</a>
+        <a href="./index.html">Studio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -23,7 +23,7 @@
             <br />
           </li>
           <li>
-            <a href="tel:+110001111111">+110001111111</a>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
             <br />
           </li>
         </ul>
@@ -73,8 +73,8 @@
       </section>
     </main>
     <footer>
-      <a href="https://artemgoit.github.io/goit-markup-hw-01/">WEB</a>
-      <a href="https://artemgoit.github.io/goit-markup-hw-01/">STUDIO</a>
+      <a href="./index.html">Web</a>
+      <a href="./index.html">Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
