--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">Web</a>
-        <a href="./index.html">Studio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -23,7 +22,7 @@
             <br />
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111">+110001111111</a>
             <br />
           </li>
         </ul>
