--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="https://artemgoit.github.io/goit-markup-hw-01/">WEB</a>
+        <a href="https://artemgoit.github.io/goit-markup-hw-01/">STUDIO</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -35,23 +36,29 @@
       </section>
       <section>
         <h2>Business</h2>
-        <h3>Strategy</h3>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
 
-        Our goal is to identify the business problem to walk away with the
-        perfect and creative solution. <
-        <h3>Punctuality</h3>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </li>
 
-        Bring the key message to the brand's audience for the best price within
-        the shortest possible time.
-        <h3>Diligence</h3>
+          <li><h3>Punctuality</h3></li>
 
-        Research and confirm brands that present the strongest digital growth
-        opportunities and minimize risk.
+          Bring the key message to the brand's audience for the best price
+          within the shortest possible time.
 
-        <h3>Technologies</h3>
+          <li><h3>Diligence</h3></li>
 
-        Design practice focused on digital experiences. We bring forth a deep
-        passion for problem-solving.
+          Research and confirm brands that present the strongest digital growth
+          opportunities and minimize risk.
+
+          <li><h3>Technologies</h3></li>
+
+          Design practice focused on digital experiences. We bring forth a deep
+          passion for problem-solving.
+        </ul>
       </section>
       <section>
         <h2>Our Team</h2>
@@ -72,8 +79,8 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">Web</a>
-      <a href="./index.html">Studio</a>
+      <a href="https://artemgoit.github.io/goit-markup-hw-01/">WEB</a>
+      <a href="https://artemgoit.github.io/goit-markup-hw-01/">STUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
