--- a/index.html
+++ b/index.html
@@ -41,38 +41,53 @@
             </p>
           </li>
 
-          <li><h3>Punctuality</h3></li>
-
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-
-          <li><h3>Diligence</h3></li>
-
-          Research and confirm brands that present the strongest digital growth
-          opportunities and minimize risk.
-
-          <li><h3>Technologies</h3></li>
-
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
         </ul>
       </section>
       <section>
         <h2>Our Team</h2>
-        <li><img src="images/img.jpg" alt="team card" width="264" /></li>
-        <h3>Mark Guerrero</h3>
-        <p>Product Designer</p>
-        <li><img src="images/tom.jpg" alt="team card2" width="264" /></li>
-        <h3>Tom Ford</h3>
-        <p>Frontend Developer</p>
-        <li>
-          <img src="images/camila.jpg" alt="team card3" width="264" />
-        </li>
-        <h3>Camila Garcia</h3>
-        <p>Marketing</p>
-        <li><img src="images/david.jpg" alt="team card" width="264" /></li>
-        <h3>Daniel Wilson</h3>
-        <p>UI Designer</p>
+        <ul>
+          <li>
+            <img src="images/img.jpg" alt="team card" width="264" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="images/tom.jpg" alt="team card2" width="264" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="images/camila.jpg" alt="team card3" width="264" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="images/david.jpg" alt="team card" width="264" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
