--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="https://artemgoit.github.io/goit-markup-hw-01/">WEB</a>
-        <a href="https://artemgoit.github.io/goit-markup-hw-01/">STUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -68,22 +67,22 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="images/img.jpg" alt="team card" width="264" />
+            <img src="./images/img.jpg" alt="team card" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/tom.jpg" alt="team card2" width="264" />
+            <img src="./images/tom.jpg" alt="team card2" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/camila.jpg" alt="team card3" width="264" />
+            <img src="./images/camila.jpg" alt="team card3" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/david.jpg" alt="team card" width="264" />
+            <img src="./images/david.jpg" alt="team card" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -91,8 +90,7 @@
       </section>
     </main>
     <footer>
-      <a href="https://artemgoit.github.io/goit-markup-hw-01/">WEB</a>
-      <a href="https://artemgoit.github.io/goit-markup-hw-01/">STUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
